# pic

./: .directory  .gitignore  CMakeLists.txt  Makefile  driver.cpp  file_io.cpp  nodeID  num_density.cpp  particle_mover.cpp  plot.py  plotfvx.py  plotk.py  plotphi.py  plotrho.py  plotvx.py  poisson_solver.cpp  vel_dist.cpp
include/: file_io.hpp  num_density.hpp  particle_mover.hpp  poisson_solver.hpp  vel_dist.hpp
src/: CMakeLists.txt  driver.cpp  file_io.cpp  particle_mover.cpp  vel_dist.cpp
src/include/: file_io.hpp  num_density.hpp  particle_mover.hpp  poisson_solver.hpp
